autenticacion con google

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/testdb?schema=public"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="GldJLASZncoiZvwIrBjsrwuEU1mfGYmoYfInGC+ntk0="
+
+GOOGLE_CLIENT_ID="276421583038-k4i6dfv0pe50fifplh594gashh79tot7.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
