--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://passwordExample:postgres@localhost:5432/databaseExample?schema=schemaExample"
+DATABASE_URL="postgresql://passwordExample:userExample@localhost:5432/databaseExample?schema=schemaExample"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=""
 
