Eliminar archivo .env del seguimiento de Git

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/testdb?schema=public"
+DATABASE_URL="postgresql://passwordExample:userExample@localhost:5432/databaseExample?schema=schemaExample"
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="GldJLASZncoiZvwIrBjsrwuEU1mfGYmoYfInGC+ntk0="
+NEXTAUTH_SECRET=""
 
-GOOGLE_CLIENT_ID="276421583038-k4i6dfv0pe50fifplh594gashh79tot7.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
