--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "antd": "^5.20.2",
     "bcrypt": "^5.1.1",
-    "next": "14.2.5",
+    "next": "^14.2.14",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
