--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcrypt": "^5.1.1",
     "next": "^14.2.14",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.18.0",
