--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.20.2",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
